[lworld] C2 compilation fails with assert "user must call transfer_exceptions_into_jvms"

XMLWordPrintable

      Happens with -XX:PerMethodSpecTrapLimit=0 -XX:PerMethodTrapLimit=0:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/workspace/open/src/hotspot/share/opto/graphKit.hpp:89), pid=17351, tid=17364
      # assert(!has_exceptions()) failed: user must call transfer_exceptions_into_jvms
      #

      Current CompileTask:
      C2: 34902 3362 b java.lang.invoke.LambdaForm$MH/0x0000000801013400::invoke (47 bytes)

      Stack: [0x00007facf98f2000,0x00007facf99f3000], sp=0x00007facf99ef3f0, free space=1012k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x600731] GraphKit::~GraphKit()+0x41
      V [libjvm.so+0x12e3664] LibraryIntrinsic::generate(JVMState*)+0x3e4
      V [libjvm.so+0xb9c041] Parse::do_call()+0x391
      V [libjvm.so+0x1648698] Parse::do_one_bytecode()+0x438
      V [libjvm.so+0x162fe68] Parse::do_one_block()+0x848
      V [libjvm.so+0x1630d90] Parse::do_all_blocks()+0x130
      V [libjvm.so+0x1635db3] Parse::Parse(JVMState*, ciMethod*, float)+0xe33
      V [libjvm.so+0x864205] ParseGenerator::generate(JVMState*)+0x115
      V [libjvm.so+0xa4acf1] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1131
      V [libjvm.so+0x861128] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1f8
      V [libjvm.so+0xa5b641] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xea1
      V [libjvm.so+0xa5c2c8] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x1921166] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x19275e0] Thread::call_run()+0x100
      V [libjvm.so+0x15ea086] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: