8262231: [lworld] C2 compilation fails with assert "user must call transfer_exceptions_into_jvms"