src/hotspot/share/opto/library_call.cpp
@@ -109,7 +109,9 @@ JVMState* LibraryIntrinsic::generate(JVMState* jvms) {
 #endif
   ciMethod* callee = kit.callee();
   const int bci    = kit.bci();
-
+#ifdef ASSERT
+  Node* ctrl = kit.control();
+#endif
   // Try to inline the intrinsic.
   if ((CheckIntrinsics ? callee->intrinsic_candidate() : true) &&
       kit.try_to_inline(_last_predicate)) {
@@ -131,8 +133,17 @@ JVMState* LibraryIntrinsic::generate(JVMState* jvms) {
     C->print_inlining_update(this);
     return kit.transfer_exceptions_into_jvms();
   }
-
   // The intrinsic bailed out
+#ifdef ASSERT
+  if (ctrl != kit.control()) {
+    ctrl->dump(0);
+    tty->print_cr("####");
+    kit.control()->dump(3);
+    assert(false, "control flow added");
+  }
+  // TODO just use this
+  //assert(ctrl == kit.control(), "Control flow was added although we bailed out");
+#endif
   if (jvms->has_method()) {
     // Not a root compile.
     const char* msg;
@@ -2220,25 +2231,15 @@ bool LibraryCallKit::inline_unsafe_access(bool is_store, const BasicType type, c
 
   ciInlineKlass* inline_klass = NULL;
   if (type == T_INLINE_TYPE) {
-    Node* cls = null_check(argument(4));
-    if (stopped()) {
-      return true;
-    }
-    Node* kls = load_klass_from_mirror(cls, false, NULL, 0);
-    const TypeKlassPtr* kls_t = _gvn.type(kls)->isa_klassptr();
-    if (!kls_t->klass_is_exact()) {
+    const TypeInstPtr* cls = _gvn.type(argument(4))->isa_instptr();
+    if (cls == NULL || cls->const_oop() == NULL) {
       return false;
     }
-    ciKlass* klass = kls_t->klass();
-    if (!klass->is_inlinetype()) {
+    ciType* mirror_type = cls->const_oop()->as_instance()->java_mirror_type();
+    if (!mirror_type->is_inlinetype()) {
       return false;
     }
-    inline_klass = klass->as_inline_klass();
-  }
-
-  receiver = null_check(receiver);
-  if (stopped()) {
-    return true;
+    inline_klass = mirror_type->as_inline_klass();
   }
 
   if (base->is_InlineType()) {
@@ -2402,6 +2403,10 @@ bool LibraryCallKit::inline_unsafe_access(bool is_store, const BasicType type, c
     }
   }
 
+  receiver = null_check(receiver);
+  if (stopped()) {
+    return true;
+  }
   // Heap pointers get a null-check from the interpreter,
   // as a courtesy.  However, this is not guaranteed by Unsafe,
   // and it is not possible to fully distinguish unintended nulls
@@ -2498,41 +2503,36 @@ bool LibraryCallKit::inline_unsafe_access(bool is_store, const BasicType type, c
 bool LibraryCallKit::inline_unsafe_make_private_buffer() {
   Node* receiver = argument(0);
   Node* value = argument(1);
+  if (!value->is_InlineType()) {
+    return false;
+  }
 
   receiver = null_check(receiver);
   if (stopped()) {
     return true;
   }
 
-  if (!value->is_InlineType()) {
-    return false;
-  }
-
   set_result(value->as_InlineType()->make_larval(this, true));
-
   return true;
 }
 
 bool LibraryCallKit::inline_unsafe_finish_private_buffer() {
   Node* receiver = argument(0);
   Node* buffer = argument(1);
+  if (!buffer->is_InlineType()) {
+    return false;
+  }
+  InlineTypeNode* vt = buffer->as_InlineType();
+  if (!vt->is_allocated(&_gvn) || !_gvn.type(vt)->is_inlinetype()->larval()) {
+    return false;
+  }
 
   receiver = null_check(receiver);
   if (stopped()) {
     return true;
   }
 
-  if (!buffer->is_InlineType()) {
-    return false;
-  }
-
-  InlineTypeNode* vt = buffer->as_InlineType();
-  if (!vt->is_allocated(&_gvn) || !_gvn.type(vt)->is_inlinetype()->larval()) {
-    return false;
-  }
-
   set_result(vt->finish_larval(this));
-
   return true;
 }
 
@@ -3256,22 +3256,22 @@ bool LibraryCallKit::inline_Class_cast() {
 
   // First, see if Class.cast() can be folded statically.
   // java_mirror_type() returns non-null for compile-time Class constants.
+  bool requires_null_check = false;
   ciType* tm = mirror_con->java_mirror_type();
   if (tm != NULL && tm->is_klass() && obj_klass != NULL) {
     if (!obj_klass->is_loaded()) {
       // Don't use intrinsic when class is not loaded.
       return false;
     } else {
-      if (!obj->is_InlineType() && tm->as_klass()->is_inlinetype()) {
-        // Casting to .val, check for null
-        obj = null_check(obj);
-        if (stopped()) {
-          return true;
-        }
-      }
+      // Check for null if casting to .val
+      requires_null_check = !obj->is_InlineType() && tm->as_klass()->is_inlinetype();
+
       int static_res = C->static_subtype_check(tm->as_klass(), obj_klass);
       if (static_res == Compile::SSC_always_true) {
         // isInstance() is true - fold the code.
+        if (requires_null_check) {
+          obj = null_check(obj);
+        }
         set_result(obj);
         return true;
       } else if (static_res == Compile::SSC_always_false) {
@@ -3292,6 +3292,9 @@ bool LibraryCallKit::inline_Class_cast() {
   // Class.cast() is java implementation of _checkcast bytecode.
   // Do checkcast (Parse::do_checkcast()) optimizations here.
 
+  if (requires_null_check) {
+    obj = null_check(obj);
+  }
   mirror = null_check(mirror);
   // If mirror is dead, only null-path is taken.
   if (stopped()) {
@@ -3310,7 +3313,7 @@ bool LibraryCallKit::inline_Class_cast() {
 
   Node* res = top();
   if (!stopped()) {
-    if (EnableValhalla && !obj->is_InlineType()) {
+    if (EnableValhalla && !obj->is_InlineType() && !requires_null_check) {
       // Check if we are casting to .val
       Node* is_val_kls = generate_value_guard(kls, NULL);
       if (is_val_kls != NULL) {
